# LangGraph-deploy

./: README.md
backend/: .gitignore  pyproject.toml
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
frontend/src/: global.css
